# django-shop

./: pyproject.toml
app/: models.py
mysite/settings/: __init__.py  settings.py
